cluster-app/helm/pyroscope/pre-hec/ingress-pyroscope-query-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyroscope-ui
  namespace: pyroscope
spec:
  ingressClassName: nginx
  rules:
  - host: pyroscope-pre-hec-k8s.eeo-inc.com
    http:
      paths:
      - backend:
          service:
            name: pyroscope-query-frontend
            port:
              number: 4040
        path: /
        pathType: Prefix
